Homework for lesson 1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">geekbrains.android</string>
+    <string name="Edit_text">Add text here...</string>
+    <string name="hello_geekbrains">Hello GeekBrains!</string>
 </resources>
